# rust-chat-ws

./: Cargo.toml
src/: async_timer.rs  chat.rs  id_record.rs  main.rs
src/chat/: messages.rs  store.rs
src/chat/messages/: requests.rs  responses.rs  types.rs
src/chat/messages/requests/: auth.rs  create_dialog.rs  response_user_msg.rs  user_msg.rs
src/chat/messages/responses/: created_dialog.rs  error.rs  ok.rs  registered.rs
src/chat/messages/types/: create_dialog.rs  response_user_msg.rs  user_msg.rs
src/chat/store/: dialogs.rs  error.rs  selectors.rs  user.rs  users.rs
test-ws/: index.js  package.json
test-ws/helpers/: randInt.js  uCode.js
