[package]
name = "cut-cli"
version = "0.1.0"
authors = ["Andrew Brigthon <snatvb@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.24.0"
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["macros", "tcp", "dns", "io-util"] }
rayon = "1.3.0"
rand = "0.7"