[package]
name = "chat"
version = "0.1.0"
authors = ["Andrew Brigthon <snatvb@ya.ru>"]
edition = "2018"

# [features]
# default = ["connect"]
# connect = ["stream", "tokio/net"]
# stream = []

[dependencies]
tokio-tungstenite = "*"
futures = "0.3.5"
tokio = { version = "0.2", features = ["full"] }
rayon = "1.3.0"
rand = "0.7"
futures-util = { version = "0.3", features = ["async-await", "sink", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
